@@ -46,7 +46,11 @@
                         <!-- Usage: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.App</mainClass>
+                            <mainClass>MainApp</mainClass>
+                            <options>
+                                <option>--add-modules</option>
+                                <option>java.desktop</option>
+                            </options>
                         </configuration>
                     </execution>
                 </executions>
